--- a/package.json
+++ b/package.json
@@ -37,6 +37,12 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "framer-motion": "^10.16.14",
+    "react-countup": "^6.5.0",
+    "react-icons": "^4.12.0",
+    "react-intersection-observer": "^9.5.3",
+    "react-scroll": "^1.9.0",
+    "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.3.6"
   }
 }
