--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/MustafaSaied97/my-profile",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -38,6 +41,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "framer-motion": "^10.16.14",
+    "gh-pages": "^6.1.0",
     "react-countup": "^6.5.0",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
