change in json file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://github.com/MustafaSaied97/my-profile",
-  "name": "portfolio",
+  "name": "my-profile",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
