--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/MustafaSaied97/my-profile",
+  "homepage": "https://MustafaSaied97.github.ionpm/my-profile",
   "name": "my-profile",
   "version": "0.1.0",
   "private": true,
